Fix logo positioning on mobile

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -344,6 +344,7 @@ header .nav-wrapper {
 }
 header .nav-wrapper a {
   text-decoration: none;
+  text-align: center;
   color: inherit;
 }
 header .nav-wrapper a .logo {
