--- a/LESS/navigation.less
+++ b/LESS/navigation.less
@@ -20,6 +20,7 @@ header {
     }
     a {
       text-decoration: none;
+      text-align: center;
       color: inherit;
       .logo {
         justify-self: start;
